--- a/Prince Tiwari.html
+++ b/Prince Tiwari.html
@@ -16,7 +16,7 @@
 <td width="20%"></td>
 <td> <a href="file:///C:/Users/tiwar/OneDrive/Desktop/prince.html?#"> <font color="#fff">Home </font> </a></td>
 <td> <a href="file:///C:/Users/tiwar/OneDrive/Desktop/prince.html?#"><font color="#fff">Services </font></a></td>
-<td> <a href="file:///C:/Users/tiwar/OneDrive/Desktop/prince.html?#"><font color="#fff">Skills </font></a></td>
+<td> <a href="#skills"><font color="#fff">Skills </font></a></td>
 <td> <a href="file:///C:/Users/tiwar/OneDrive/Desktop/prince.html?#"><font color="#fff">Team </font> </a></td>
 <td> <a href="file:///C:/Users/tiwar/OneDrive/Desktop/prince.html?#"><font color="#fff">Contact Us </font> </a></td>
 </tr>
@@ -88,7 +88,7 @@
 <!--- End Services--->
 <!--- Skills--->
 
-</table><table width="100%" bgcolor="#25282f">
+</table><table width="100%" bgcolor="#25282f" id="skills">
 
 <tbody><tr>
 <td> <br><br><br><br>
